# buggy_ros2

./: README.md
fotosbuggy/: ._map_buildingb.pgm
install/: local_setup.sh  setup.sh
install/ackermann_controller/lib/ackermann_controller/: ackermann_teleop_joy
install/ackermann_controller/share/ackermann_controller/: package.bash  package.sh  package.zsh
install/ackermann_interfaces/share/ackermann_interfaces/: local_setup.sh  package.bash  package.sh  package.zsh
install/ackermann_msgs/share/ackermann_msgs/: package.sh
install/ackermann_odometry/lib/ackermann_odometry/: odom_publisher
install/ackermann_odometry/share/ackermann_odometry/: package.bash  package.sh  package.xml  package.zsh
install/buggy_mobile_navigation/share/buggy_mobile_navigation/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/buggy_mobile_robot/share/buggy_mobile_robot/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/buggy_mobile_robot/share/buggy_mobile_robot/cmake/: ament_cmake_export_libraries-extras.cmake
install/buggy_mobile_robot/share/buggy_mobile_robot/launch/: buggy_simulated_description.launch.py  buggy_simulated_gazebo.launch.py  buggy_simulated_mapping.launch.py
install/buggy_mobile_robot/share/buggy_mobile_robot/models/buggy_simulated_description/: model.config
install/buggy_mobile_robot/share/buggy_mobile_robot/models/eupen_race_Track/: model.sdf
install/buggy_mobile_robot/share/buggy_mobile_robot/models/new_eupen_track/: model.config
install/buggy_mobile_robot/share/buggy_mobile_robot/params/: ekf_simulated.yaml
install/buggy_mobile_robot/share/buggy_mobile_robot/rviz/: buggy_mapping_sick.rviz  buggy_mapping_slam.rviz  buggy_view_final.rviz  buggy_view_gazebo.rviz
install/buggy_mobile_robot/share/buggy_mobile_robot/src/: gazebo_to_octomap.cpp
install/buggy_mobile_robot/share/buggy_mobile_robot/worlds/: new_eupen_race.world
install/buggy_msgs/share/buggy_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/camera_calibration_parsers/lib/camera_calibration_parsers/: convert
install/camera_calibration_parsers/share/camera_calibration_parsers/: local_setup.sh  package.sh
install/camera_info_manager/share/camera_info_manager/: local_setup.sh  package.sh
install/can_msgs/share/can_msgs/: package.sh
install/costmap_converter/share/costmap_converter/: package.sh
install/costmap_converter_msgs/share/costmap_converter_msgs/: package.sh
install/image_common/share/image_common/: package.sh
install/image_transport/lib/image_transport/: list_transports  republish
install/image_transport/share/image_transport/: local_setup.sh  package.sh
install/joint_state_publisher/lib/joint_state_publisher/: joint_state_publisher
install/joint_state_publisher/share/joint_state_publisher/: package.sh
install/joint_state_publisher_gui/lib/joint_state_publisher_gui/: joint_state_publisher_gui
install/joint_state_publisher_gui/share/joint_state_publisher_gui/: package.sh
install/robot_localization/lib/robot_localization/: ekf_node  navsat_transform_node  robot_localization_listener_node  ukf_node
install/robot_localization/share/robot_localization/: package.sh
install/ros2car_buggy/share/ros2car_buggy/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
src/buggy_mobile_navigation/: CMakeLists.txt
src/buggy_mobile_navigation/launch/: buggy_mapping_VLP16.launch.py  buggy_navigation.launch.py  buggy_simulated_navigation.launch.py  dual_ekf.launch.py
src/buggy_mobile_navigation/maps/: map_building_b.yaml  map_newbuilding.yaml
src/buggy_mobile_navigation/params/: dual_ekf.yaml  nav2_params_real.yaml
src/buggy_mobile_navigation/rviz/: nav2_buggy_real.rviz
src/buggy_mobile_robot/: CMakeLists.txt
src/buggy_mobile_robot/include/buggy_mobile_robot/: gazebo_to_octomap.hpp  gazebo_to_pointcloud.hpp
src/buggy_mobile_robot/launch/: buggy_simulated_mapping_VLP16.launch.py
src/buggy_mobile_robot/models/: buggy.urdf  eupen_race.stl
src/buggy_mobile_robot/models/buggy_mobile_description/: model.config  model.sdf
src/buggy_mobile_robot/models/buggy_simulated_description/: model.sdf
src/buggy_mobile_robot/models/eupen_race_Track/: model.config
src/buggy_mobile_robot/models/new_eupen_track/: model.sdf
src/buggy_mobile_robot/params/: ekf.yaml
src/buggy_mobile_robot/rviz/: buggy_mapping_3d.rviz
src/buggy_mobile_robot/src/: botanbot_ackermann_drive.cpp  gazebo_to_pointcloud.cpp
src/buggy_mobile_robot/worlds/: empty.world  empty_world.world  new_eupen_race.world
src/ros_sensors/: CMakeLists.txt
src/ros_sensors/src/: gazebo_ros_gps.cpp  gazebo_ros_imu.cpp  gazebo_ros_realsense_camera.cpp  gazebo_ros_velodyne_laser.cpp  realsense_ros_plugin.cpp  sensor_base_attacher_plugin.cpp
(+472 files in other folders)
